style: adding sass styles and removing general css

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -4,21 +4,9 @@
 
 :root {
   --accent-color: #f87070;
-  --background-body: #1e213f;
   --text: #d7e0ff;
-  --text-dark: #1e213f;
-  --background-preferences: #ffffff;
-  --input-background: #eff1fa;
-  --background-timer: #161932;
-  --settings-heading: #161932;
-  --default-accent: #f87070;
-  --blue-accent: #70f3f8;
-  --purple-accent: #d881f8;
 
   --font-current: 'Kumbh Sans', sans-serif;
-  --font-default: 'Kumbh Sans', sans-serif;
-  --font-roboto-slab: 'Roboto Slab', serif;
-  --font-space-mono: 'Space Mono', monospace;
 }
 
 html {
@@ -48,7 +36,7 @@ body {
 body {
   display: flex;
   justify-content: center;
-  background: var(--background-body);
+  background: $backgroundBody;
 }
 
 body {
@@ -76,4 +64,8 @@ ol {
 a,
 a:hover {
   text-decoration: none;
+}
+
+button:focus:not(:focus-visible) {
+  outline: 0;
 }
