--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,5 @@
 //Colors
+$white: #fff;
 $accentColor: #f87070;
 $backgroundBody: #1e213f;
 $text: #d7e0ff;
@@ -10,6 +11,7 @@ $settingsHeading: #161932;
 $defaultAccent: #f87070;
 $blueAccent: #70f3f8;
 $purpleAccent: #d881f8;
+$toggleButton: #d7e0ff2f;
 
 //Family
 $fontCurrent: 'Kumbh Sans', sans-serif;
