--- a/src/styles/components/_Button.scss
+++ b/src/styles/components/_Button.scss
@@ -16,7 +16,8 @@
   color: var(--background-body);
   opacity: 0.5;
   font-size: 24px;
-  transition: transform 0.15s ease-in-out;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
 
   &:hover {
     opacity: 1;
