--- a/src/styles/components/_Settings.scss
+++ b/src/styles/components/_Settings.scss
@@ -6,7 +6,7 @@
   pointer-events: none;
   width: 100%;
   height: 100%;
-  transition: all 0.3s;
+  transition: 0.3s ease-in-out;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
@@ -285,7 +285,7 @@
         @include text('Kumbh Sans', $white, 16, $fontBold, 16, '', '', 0);
         width: 140px;
         height: 53px;
-        margin-top: 36px;
+        margin-top: 50px;
         padding: 0;
         border-radius: 26.5px;
         background-color: $defaultAccent;
