--- a/src/styles/components/_TimerDisplay.scss
+++ b/src/styles/components/_TimerDisplay.scss
@@ -4,9 +4,14 @@
   width: 300px;
   height: 300px;
   border-radius: 90%;
+  transition: 0.3s;
   background: linear-gradient(315deg, #2e325a 0%, #0e112a 100%);
   box-shadow: -50px -50px 100px #272c5a, 50px 50px 100px #121530;
   cursor: pointer;
+
+  &:hover {
+    box-shadow: 50px 50px 100px #272c5a, -50px -50px 100px #121530;
+  }
 
   @include mq('600', 'min') {
     width: 410px;
