--- a/src/styles/components/_Settings.scss
+++ b/src/styles/components/_Settings.scss
@@ -7,8 +7,6 @@
   width: 100%;
   height: 100%;
   transition: 0.3s ease-in-out;
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
   &-visible {
     visibility: visible;
@@ -31,6 +29,17 @@
       width: 540px;
       height: 490px;
       border-radius: 25px;
+    }
+
+    &__overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(0, 0, 0); /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+      z-index: -1;
     }
 
     &__title {
